--- a/app/src/main/res/layout/activity_ektp_movements_details.xml
+++ b/app/src/main/res/layout/activity_ektp_movements_details.xml
@@ -295,6 +295,281 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
+        <ScrollView
+            android:id="@+id/detailsCardViewToShare"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/white"
+            android:scrollbarThumbVertical="@null"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <View
+                    android:id="@+id/detailsHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_150sdp"
+                    android:background="@color/elektra_red"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:layout_width="@dimen/_150sdp"
+                    android:layout_height="@dimen/_61sdp"
+                    android:layout_marginTop="@dimen/_36sdp"
+                    android:background="@drawable/ic_appbar_logo"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/detailsHeader" />
+
+                <ImageView
+                    android:layout_width="@dimen/_89sdp"
+                    android:layout_height="@dimen/_89sdp"
+                    android:layout_marginBottom="-44dp"
+                    android:background="@drawable/ic_sheared_details_ok_image"
+                    app:layout_constraintBottom_toBottomOf="@id/detailsHeader"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/labelShipmentOk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_40sdp"
+                    android:gravity="center"
+                    android:text="@string/shipment_ok"
+                    android:theme="@style/subtitle_5"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/detailsHeader" />
+
+                <TextView
+                    android:id="@+id/amDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:gravity="center"
+                    android:text="@{movementsDetailsItem.detailAmount}"
+                    android:theme="@style/header_3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/labelShipmentOk" />
+
+                <TextView
+                    android:id="@+id/tiDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="center"
+                    android:text="@{movementsDetailsItem.detailTitle}"
+                    android:theme="@style/subtitle_1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/amDetailCardView" />
+
+                <TextView
+                    android:id="@+id/daDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="center"
+                    android:text="@{movementsDetailsItem.detailDate}"
+                    android:theme="@style/subtitle_1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tiDetailCardView" />
+
+                <TextView
+                    android:id="@+id/acLabelDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_30sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="start"
+                    android:text="@string/movements_details_outgoing_account"
+                    android:textColor="@color/elektra_gray"
+                    android:theme="@style/appbar_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/daDetailCardView" />
+
+                <TextView
+                    android:id="@+id/ouDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="start"
+                    android:text="@{movementsDetailsItem.detailName}"
+                    android:theme="@style/subtitle_2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/acLabelDetailCardView" />
+
+                <TextView
+                    android:id="@+id/reLabelDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="start"
+                    android:text="@string/movements_details_reciever_account"
+                    android:textColor="@color/elektra_gray"
+                    android:theme="@style/appbar_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/ouDetailCardView" />
+
+                <TextView
+                    android:id="@+id/naDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="start"
+                    android:text="@{movementsDetailsItem.detailName}"
+                    android:theme="@style/subtitle_2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/reLabelDetailCardView" />
+
+                <TextView
+                    android:id="@+id/coLabelDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="start"
+                    android:text="@string/movements_details_concept"
+                    android:textColor="@color/elektra_gray"
+                    android:theme="@style/appbar_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/naDetailCardView" />
+
+                <TextView
+                    android:id="@+id/coDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="start"
+                    android:text="@{movementsDetailsItem.detailConcept}"
+                    android:theme="@style/subtitle_2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/coLabelDetailCardView" />
+
+                <TextView
+                    android:id="@+id/foLabelDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="start"
+                    android:text="@string/movements_details_folio"
+                    android:textColor="@color/elektra_gray"
+                    android:theme="@style/appbar_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/coDetailCardView" />
+
+                <TextView
+                    android:id="@+id/foDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="start"
+                    android:text="@{movementsDetailsItem.detailFolio}"
+                    android:theme="@style/subtitle_2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/foLabelDetailCardView" />
+
+                <TextView
+                    android:id="@+id/stLabelDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:gravity="start"
+                    android:text="@string/movements_details_status"
+                    android:textColor="@color/elektra_gray"
+                    android:theme="@style/appbar_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/foDetailCardView" />
+
+                <TextView
+                    android:id="@+id/stDetailCardView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:layout_marginBottom="@dimen/_40sdp"
+                    android:gravity="start"
+                    android:text="@{movementsDetailsItem.detailStatus}"
+                    android:theme="@style/subtitle_2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/stLabelDetailCardView" />
+
+                <TextView
+                    android:id="@+id/stDetailCardView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:layout_marginBottom="@dimen/_40sdp"
+                    android:gravity="start"
+                    android:text="@{movementsDetailsItem.detailStatus}"
+                    android:theme="@style/subtitle_2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/stDetailCardView" />
+
+                <TextView
+                    android:id="@+id/stDetailCardView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:layout_marginBottom="@dimen/_40sdp"
+                    android:gravity="start"
+                    android:text="@{movementsDetailsItem.detailStatus}"
+                    android:theme="@style/subtitle_2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/stDetailCardView2" />
+
+                <TextView
+                    android:id="@+id/stDetailCardView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_25sdp"
+                    android:layout_marginBottom="@dimen/_70sdp"
+                    android:gravity="start"
+                    android:text="@{movementsDetailsItem.detailStatus}"
+                    android:theme="@style/subtitle_2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/stDetailCardView3"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
